spade-tests/src/snapshots/spade_tests__hir_lowering__tests__port_expression_does_not_create_non_ports.snap
---
source: spade-tests/src/hir_lowering.rs
---
struct X {x: int<8>}

entity t() -> X {
    let (a, b) = port;
    a
}


error: A port expression cannot create non-port values
  ┌─ testinput:4:18
  │
4 │     let (a, b) = port;
  │                  ^^^^ X is not a port type
  │
  = note: The port expression creates a (X, ~X)


